--- a/src/main/java/com/bloxbean/algodea/idea/contracts/ui/AppTxnBaseParamEntryForm.form
+++ b/src/main/java/com/bloxbean/algodea/idea/contracts/ui/AppTxnBaseParamEntryForm.form
@@ -90,15 +90,6 @@
               <text value="..."/>
             </properties>
           </component>
-          <component id="e2cfd" class="javax.swing.JTextField" binding="fromAccMnemonicTf">
-            <constraints>
-              <grid row="10" column="2" row-span="1" col-span="9" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-              <forms defaultalign-horz="false"/>
-            </constraints>
-            <properties/>
-          </component>
           <component id="7d7dc" class="javax.swing.JLabel">
             <constraints>
               <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -153,6 +144,15 @@
             <properties>
               <text value=" "/>
             </properties>
+          </component>
+          <component id="9967d" class="javax.swing.JPasswordField" binding="fromAccMnemonicTf">
+            <constraints>
+              <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+              <forms defaultalign-horz="false"/>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
