--- a/src/main/java/com/bloxbean/algodea/idea/stateless/ui/LogicSigSigningAccountForm.form
+++ b/src/main/java/com/bloxbean/algodea/idea/stateless/ui/LogicSigSigningAccountForm.form
@@ -55,14 +55,6 @@
           <text value="Mnemonic"/>
         </properties>
       </component>
-      <component id="ee3f7" class="javax.swing.JTextField" binding="mnemonicTf">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <grid id="120ae" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
@@ -96,6 +88,14 @@
         <properties>
           <text value="Stateless Contract Type"/>
         </properties>
+      </component>
+      <component id="4b07f" class="javax.swing.JPasswordField" binding="mnemonicTf">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
