--- a/src/main/java/com/bloxbean/algodea/idea/transaction/ui/AccountEntryInputForm.form
+++ b/src/main/java/com/bloxbean/algodea/idea/transaction/ui/AccountEntryInputForm.form
@@ -77,7 +77,7 @@
           <text value="Mnemonic"/>
         </properties>
       </component>
-      <component id="f772d" class="javax.swing.JTextField" binding="mnemonicTf">
+      <component id="41680" class="javax.swing.JPasswordField" binding="mnemonicTf">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
